--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,9 @@
+# jsp
 spring.mvc.view.prefix: /jsp/
 spring.mvc.view.suffix: .jsp
+
+# configurações do banco de dados
+# spring.datasource.url=jdbc:mysql://localhost/test
+# spring.datasource.username=dbuser
+# spring.datasource.password=dbpass
+# spring.datasource.driver-class-name=com.mysql.jdbc.Driver
