Adicionado Cliente Controller. Possível realizar todas as transações. Adicionados respectivos JSPs

--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,17 @@
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+		</dependency>
+		<dependency>
+		    <groupId>javax.servlet</groupId>
+		    <artifactId>jstl</artifactId>
+		    </dependency>
 	</dependencies>
+
+
 	<properties>
 		<java.version>1.8</java.version>
 	</properties>
