--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,10 @@ spring.mvc.view.prefix: /jsp/
 spring.mvc.view.suffix: .jsp
 
 # configurações do banco de dados
-# spring.datasource.url=jdbc:mysql://localhost/test
-# spring.datasource.username=dbuser
-# spring.datasource.password=dbpass
-# spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://db4free.net
+#spring.datasource.username=hiranovendas
+#spring.datasource.password=projetoBD2016
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+#spring.jpa.database = MYSQL
+#spring.jpa.show-sql = true
