--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,11 @@ spring.mvc.view.suffix: .jsp
 
 #spring.jpa.database = MYSQL
 #spring.jpa.show-sql = true
+
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/sistema_vendas
+spring.datasource.username=root
+spring.datasource.password=root1@3
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+spring.jpa.database = MYSQL
+spring.jpa.show-sql = true
