--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.mvc.view.prefix: /jsp/
 spring.mvc.view.suffix: .jsp
 
 # configurações do banco de dados
-spring.datasource.url=jdbc:mysql://db4free.net:3306/sistema_vendas
+spring.datasource.url=jdbc:mysql://db4free.net:3306/sistema_vendas?useSSL=false
 spring.datasource.username=hiranovendas
 spring.datasource.password=12711a
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
