--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,15 +4,15 @@ spring.mvc.view.suffix: .jsp
 
 # configurações do banco de dados
 
-#spring.datasource.url=jdbc:mysql://db4free.net:3306/sistema_vendas?useSSL=false
-#spring.datasource.username=hiranovendas
-#spring.datasource.password=12711a
-#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/sistema_vendas?useSSL=false
-spring.datasource.username=root
-spring.datasource.password=root1@3
+spring.datasource.url=jdbc:mysql://db4free.net:3306/sistema_vendas?useSSL=false
+spring.datasource.username=hiranovendas
+spring.datasource.password=12711a
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+#spring.datasource.url=jdbc:mysql://127.0.0.1:3306/sistema_vendas?useSSL=false
+#spring.datasource.username=root
+#spring.datasource.password=root1@3
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 spring.jpa.database = MYSQL
 spring.jpa.show-sql = true
